--- a/_data/author.yml
+++ b/_data/author.yml
@@ -1,13 +1,13 @@
 name: Sharad Raj
-dp: https://vxsparsh.me/assets/portfolio.png
+dp: https://i.pinimg.com/originals/36/9a/a9/369aa9b966b29aa2be10fb38337a5232.jpg
 description: "
   <p>
     Snipesec
   </p>
   <br/>
   <p>
-    You should follow him on <a href='https://github.com/vxsparsh' target='_blank'>Github</a>
-  </P>
+    Hey there, welcome to my website.
+  </p>
 "
 email: iamsnipe@protonmail.com
 contact:
