--- a/_data/author.yml
+++ b/_data/author.yml
@@ -6,7 +6,7 @@ description: "
   </p>
   <br/>
   <p>
-    Hey there, welcome to my website.
+    <a href="https://youtube.com/0xSN1PE" target="_blank">YOUTUBE.COM/0xSN1PE</a>
   </p>
 "
 email: iamsnipe@protonmail.com
