--- a/_data/author.yml
+++ b/_data/author.yml
@@ -6,7 +6,7 @@ description: "
   </p>
   <br/>
   <p>
-    <a href="https://youtube.com/0xSN1PE" target="_blank">YOUTUBE.COM/0xSN1PE</a>
+    [YOUTUBE.COM/0xSN1PE](https://youtube.com/0xSN1PE)
   </p>
 "
 email: iamsnipe@protonmail.com
