--- a/_data/author.yml
+++ b/_data/author.yml
@@ -6,7 +6,7 @@ description: "
   </p>
   <br/>
   <p>
-    [YOUTUBE.COM/0xSN1PE](https://youtube.com/0xSN1PE)
+    YOUTUBE.COM/0xSN1PE
   </p>
 "
 email: iamsnipe@protonmail.com
