--- a/_data/author.yml
+++ b/_data/author.yml
@@ -5,16 +5,13 @@ description: "
     Snipesec
   </p>
   <br/>
-  <p>
-    YOUTUBE.COM/0xSN1PE
-  </p>
 "
 email: iamsnipe@protonmail.com
 contact:
-  - title: linkedin
-    url: https://www.linkedin.com/in/sparshanand1337
-  - title: github
-    url: https://github.com/vxsparsh
+  - title:
+    url:
+  - title:
+    url:
   - title: twitter
     url: https://twitter.com/0xSN1PE
   # - title: dev
