--- a/_data/author.yml
+++ b/_data/author.yml
@@ -8,13 +8,7 @@ description: "
 "
 email: iamsnipe@protonmail.com
 contact:
-  - title:
-    url:
-  - title:
-    url:
   - title: twitter
-    url: https://twitter.com/0xSN1PE
-  # - title: dev
-  # url: https://dev.to/sharadcodes
+    url: https://twitter.com/0xSN1PES
   - title: email
     url: mailto:iamsnipe@protonmail.com
